# DLPulse-next

./: .gitignore  LEGAL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml
dlpulse_next/: __init__.py  __main__.py  branding.py  cast_http.py  chromecast_helper.py  ffmpeg_tools.py  file_browser.py  github_update.py  legal.py  library_scan.py  linux_packaged.py  media_paths.py  native_dialogs.py  packaged_runtime.py  process_win.py  search_logic.py  settings_store.py  webapp.py  windows_bundled_runtimes.py  windows_pythonnet.py  yt_core.py  ytdlp_update.py
dlpulse_next/static/: app.js  index.html  style.css
dlpulse_next/static/donate/: README.txt
packaging/binaries/: README.md
packaging/flatpak/: README.md  build.sh  com.github.calvarr.DLPulseNext.desktop  com.github.calvarr.DLPulseNext.metainfo.xml  com.github.calvarr.DLPulseNext.yml
packaging/linux/: bundle_gtk_webkit.sh  check-deps.sh  linux-dependencies.md  make_appimage.sh  strip_internal_gtk.sh
packaging/macos/: make_dmg.sh
packaging/pyinstaller/: README.md  dlpulse_next.spec  rthook_gstreamer.py  rthook_gtk.py  rthook_windows.py  windows_runtimeconfig.json
packaging/windows/: DLPulseNext.nsi  build_installer.ps1  bundle_ffmpeg_into_dist.ps1  embed_runtimes_into_dist.ps1  stage_runtimes.ps1
